--- a/Guides/Tutorial/CMakeLists.txt
+++ b/Guides/Tutorial/CMakeLists.txt
@@ -22,7 +22,7 @@ add_executable(Tutorial main.cpp)
 
 target_link_libraries(Tutorial PUBLIC ${EXTRA_LIBS})
 
-target_include_directories(Tutorial PUBLIC "${PROJECT_BINARY_DIR}")
-
-
+target_include_directories(Tutorial PUBLIC 
+                            "${PROJECT_BINARY_DIR}"
+                            "${EXTRA_INCLUDES}") 
 
