--- a/Guides/Tutorial/CMakeLists.txt
+++ b/Guides/Tutorial/CMakeLists.txt
@@ -15,7 +15,6 @@ configure_file(TutorialConfig.h.in TutorialConfig.h)
 if(USE_MYMATH)
     add_subdirectory(MathFunctions)
     list(APPEND EXTRA_LIBS MathFunctions)
-    list(APPEND EXTRA_INCLUDES "${PROJECT_SOURCE_DIR}/MathFunctions")
 endif()
 
 add_executable(Tutorial main.cpp)
@@ -23,6 +22,5 @@ add_executable(Tutorial main.cpp)
 target_link_libraries(Tutorial PUBLIC ${EXTRA_LIBS})
 
 target_include_directories(Tutorial PUBLIC 
-                            "${PROJECT_BINARY_DIR}"
-                            "${EXTRA_INCLUDES}") 
+                            "${PROJECT_BINARY_DIR}")
 
